# acts

./: .gitlab-ci.yml  CITATION.cff
CI/physmon/: param_scan.py  physmon.py
CI/physmon/workflows/: physmon_ckf_tracking.py
Core/src/EventData/: PrintParameters.cpp  TrackParameterHelpers.cpp  TransformationHelpers.cpp
Core/src/Geometry/: Layer.cpp
Core/src/Material/: AccumulatedMaterialSlab.cpp  AverageMaterials.cpp  BinnedSurfaceMaterial.cpp  Interactions.cpp  Material.cpp  MaterialSlab.cpp  SurfaceMaterialMapper.cpp  VolumeMaterialMapper.cpp
Core/src/Propagator/: NavigatorError.cpp  StraightLineStepper.cpp  SympyStepper.cpp
Core/src/Seeding/: EstimateTrackParamsFromSeed.cpp
Core/src/Surfaces/: BoundaryTolerance.cpp  CurvilinearSurface.cpp  DiscSurface.cpp  LineSurface.cpp  PlaneSurface.cpp  RectangleBounds.cpp  Surface.cpp
Core/src/TrackFinding/: MeasurementSelector.cpp
Core/src/TrackFitting/: CMakeLists.txt
Core/src/Utilities/: SpacePointUtility.cpp
Examples/Detectors/Geant4Detector/: CMakeLists.txt
Examples/Detectors/Geant4Detector/src/: CalorimeterDemo.cpp
Examples/Scripts/: save_vtx_trks.py  vertex_mu_scan_commented.py
Tests/Benchmarks/: StepperBenchmarkCommons.hpp  SurfaceIntersectionBenchmark.cpp
Tests/Data/: vertexing_event_mu3_beamspot.csv  vertexing_event_mu3_tracks.csv  vertexing_event_mu3_vertices_truth.csv
Tests/IntegrationTests/: NavigatorConsistency.cpp  PropagationBentTracks.cpp  PropagationDenseConstant.cpp  PropagationTests.hpp
codegen/: generate_sympy_cov.py  generate_sympy_jac.py  generate_sympy_stepper.py
(+373 files in other folders)
